# wappo-game-solver

./: CMakeLists.txt  brutforcer.hpp  example.map  example2.map  game_emulator.hpp  main.cpp  map_reader.hpp  readme.md  update_string.hpp
src/: bruteforcer.hpp  game_emulator.hpp  main.cpp  map.hpp  map_reader.hpp
